Add button that clears the grid

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <script src="javascript.js" defer></script>
     </head>
     <body>
+        
+        <button class="setGrid" onclick="clearGrid()">Clear Grid</button>
         <div class = "box"></div>
     </body>
 </html>
