Create setGrid with appropiate button in html

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
         <script src="javascript.js" defer></script>
     </head>
     <body>
-        
-        <button class="setGrid" onclick="clearGrid()">Clear Grid</button>
+        <div class="buttons">
+            <button class="setGrid" onclick="setGrid()">Set Grid</button>
+            <button class="clearGrid" onclick="clearGrid()">Clear Grid</button>
+
+        </div>
         <div class = "box"></div>
     </body>
 </html>
